[package]
name = "debug-message"
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Ernest1338"]
description = "Print debug messages if the DEBUG environment variable is set"
repository = "https://github.com/Ernest1338/debug-message"
homepage = "https://github.com/Ernest1338/debug-message"
documentation = "https://docs.rs/debug-message"
readme = "README.md"
keywords = ["debug", "print"]

[dependencies]
